# mango-apps

./: Makefile.am  README.md  configure.ac
apps/: Makefile.am
apps/hello_dc/: Makefile.am  hello_dc.c
apps/mangofb/: Makefile.am  mangofb.c  mangofb.h
apps/tcp_client/: Makefile.am  tcp_client.c
apps/watchdog/: Makefile.am  wd_daemon.c
scripts/: mango
